--- a/mfw-master/mfw-gateway/src/main/resources/application-dev.yml
+++ b/mfw-master/mfw-gateway/src/main/resources/application-dev.yml
@@ -1,1 +1,29 @@
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowed-origin-patterns:
+              -  "*"
+            allowed-methods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - PATCH
+              - OPTIONS
+            allowed-headers: "*"
+            allow-credentials: true
+      routes:
+        - id: user_route
+          uri: lb://mfw-user
+          predicates:
+            - Path=/user/**
+          filters:
+            - StripPrefix=1
+
 
