--- a/mfw-master/mfw-user/src/main/resources/application-dev.yml
+++ b/mfw-master/mfw-user/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/shequ-product?character-Encoding=utf-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/mfw-user?character-Encoding=utf-8&serverTimezone=GMT%2B8
     username: root
     password: zdf19941118.
   rabbitmq:
